# src/@generated/models/chat-dialog.ts
@@ -1,0 +1,44 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Charity API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import { UserUser } from './user-user';
+
+/**
+ * 
+ * @export
+ * @interface ChatDialog
+ */
+export interface ChatDialog {
+    /**
+     * 
+     * @type {string}
+     * @memberof ChatDialog
+     */
+    id?: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof ChatDialog
+     */
+    unread_message_counter?: number;
+    /**
+     * 
+     * @type {UserUser}
+     * @memberof ChatDialog
+     */
+    user?: UserUser;
+}
+
+
